fix: adjusting some routes and services
